Add missing title to index.html for improved page structure

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <html lang="de">
 <head>
     <link rel="stylesheet" href="./index.css">
+    <title>Function Example</title>
 </head>
 <body>
 <h1> Function Example</h1>
